<resources>
    <string name="app_name">Minesweeper</string>

    <string name="score">Score:</string>

    <string name="game_over_btn_reset">Reset</string>
    <string name="game_over_title">Game Over</string>
    <string name="game_over_btn_back">Back to menu</string>

    <string name="winning_title">You won!</string>
    <string name="winning_btn_reset">Reset</string>
    <string name="winning_btn_back">Back to menu</string>
    <string name="main_menu_btn_play">PLAY</string>
</resources>
