<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_dialog_background"
    android:padding="@dimen/spacing_small_8"
    tools:context=".game.ui.fragments.dialogs.GameOverFragment">

    <TextView
        android:id="@+id/tw_game_over"
        android:layout_width="@dimen/dialog_title_size_250"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="@dimen/font_huge_title_48"
        android:textColor="@color/color_dialog_text"
        android:text="@string/game_over_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small_12"
            android:textColor="@color/color_dialog_text"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:text="@string/game_over_btn_reset"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_small_12"
            android:textColor="@color/color_dialog_text"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/spacing_tiny_4"
            android:layout_marginEnd="@dimen/spacing_tiny_4"
            android:text="@string/game_over_btn_back" />

    </LinearLayout>

</LinearLayout>